# powerful-pipes

./: CHANGELOG.rst  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: upload-pypi.yml
examples/: example_file.json  pass_by_reference.py  pipe_data_by_file_ref.txt
powerful_pipes/: __init__.py  async_io_utils.py  exceptions.py  io_utils.py  json_schema.py  json_utils.py  logging.py  typing.py
