[metadata]
name = powerful-pipes
description = Powerful pipes
version = file: VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
license = License :: OSI Approved :: Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
author = 42 Crunch team
author_email = dev@42crunch.com
url = https://github.com/42Crunch/powerful-pipes

[options]
zip_safe = True
include_package_data = True
packages = find:
